[package]
name = "sshscan-bin"
version = "0.3.4"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
sshscan-core = { path = "../sshscan-core" }
clap = { version = "~4.5.23", default-features = false, features = ["std", "derive", "help", "usage", "suggestions", "error-context"] }
which = { version = "~7.0.1", default-features = false }

[[bin]]
name = "sshscan"
path = "src/main.rs"
