[package]
name = "sshscan-bin"
version = "0.3.4"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
sshscan-core = { path = "../sshscan-core" }
clap = { version = "~4.6.1", default-features = false, features = ["std", "derive", "help", "usage", "suggestions", "error-context"] }
which = { version = "~8.0.2", default-features = false, features = ["real-sys"] }

[[bin]]
name = "sshscan"
path = "src/main.rs"
