[package]
name = "sshscan-bin"
version = "0.3.4"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
sshscan-core = { path = "../sshscan-core" }
pico-args = { version = "~0.5.0", default-features = false }
which = { version = "~8.0.2", default-features = false, features = ["real-sys"] }

[[bin]]
name = "sshscan"
path = "src/main.rs"
