[package]
name = "sshscan-core"
version = "0.3.4"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
xmltree = { version = "~0.12.0", default-features = false }
thiserror = { version = "~2.0.18", default-features = false }
build_html = { version = "~2.7.0", default-features = false }
chrono = { version = "~0.4.44", default-features = false, features = ["std", "clock", "unstable-locales"]}
arbitrary = { version = "1", optional = true, features = ["derive"] }

[features]
default = []
fuzz = ["dep:arbitrary"]
