[package]
name = "sshscan-core"
version = "0.4.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
xmltree = { version = "~0.12.0", default-features = false }
build_html = { version = "~2.7.0", default-features = false }
chrono = { version = "~0.4.44", default-features = false, features = ["now", "clock"]}
arbitrary = { version = "1", optional = true, features = ["derive"] }

[features]
default = []
fuzz = ["dep:arbitrary"]
